[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/art/ui/minig_laser_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/minig_laser_button.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/minig_laser_button_hover.png" type="Texture" id=3]
[ext_resource path="res://source/UI/SpaceUI.gd" type="Script" id=4]
[ext_resource path="res://source/UI/SpaceUIOverview.tres" type="StyleBox" id=5]
[ext_resource path="res://source/UI/SpaceUIPanel.tres" type="StyleBox" id=6]
[ext_resource path="res://16icon.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/moveto.png" type="Texture" id=8]
[ext_resource path="res://assets/art/ui/station_64.png" type="Texture" id=9]
[ext_resource path="res://assets/art/ui/dock.png" type="Texture" id=10]
[ext_resource path="res://assets/art/ui/mine.png" type="Texture" id=11]
[ext_resource path="res://assets/art/ui/warpto.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.384314, 1, 0.0235294, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.0745098, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.14902, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.980392, 1, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.027451, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.996078, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="SpaceUI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="OverviewHUD" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 271.0
custom_styles/panel = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="OverviewHUD"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="SELECTIONBOX" type="HBoxContainer" parent="OverviewHUD/VBoxContainer"]
margin_top = 5.0
margin_right = 245.0
margin_bottom = 69.0
alignment = 1

[node name="SELECTIONICON" type="TextureRect" parent="OverviewHUD/VBoxContainer/SELECTIONBOX"]
margin_left = 7.0
margin_right = 71.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="SELECTIONTEXT" type="Label" parent="OverviewHUD/VBoxContainer/SELECTIONBOX"]
margin_left = 75.0
margin_top = 16.0
margin_right = 237.0
margin_bottom = 47.0
text = "Ishukone Refining Station
Distance: 100 km"

[node name="HSeparator" type="HSeparator" parent="OverviewHUD/VBoxContainer"]
margin_top = 73.0
margin_right = 245.0
margin_bottom = 77.0

[node name="BUTTONSBOX" type="HBoxContainer" parent="OverviewHUD/VBoxContainer"]
margin_top = 81.0
margin_right = 245.0
margin_bottom = 113.0
alignment = 1

[node name="MOVETOButton" type="TextureButton" parent="OverviewHUD/VBoxContainer/BUTTONSBOX"]
margin_left = 52.0
margin_right = 84.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )

[node name="WARPTOButton" type="TextureButton" parent="OverviewHUD/VBoxContainer/BUTTONSBOX"]
margin_left = 88.0
margin_right = 120.0
margin_bottom = 32.0
texture_normal = ExtResource( 12 )

[node name="DOCK" type="TextureButton" parent="OverviewHUD/VBoxContainer/BUTTONSBOX"]
margin_left = 124.0
margin_right = 156.0
margin_bottom = 32.0
texture_normal = ExtResource( 10 )

[node name="MINE" type="TextureButton" parent="OverviewHUD/VBoxContainer/BUTTONSBOX"]
margin_left = 160.0
margin_right = 192.0
margin_bottom = 32.0
texture_normal = ExtResource( 11 )

[node name="HSeparator2" type="HSeparator" parent="OverviewHUD/VBoxContainer"]
margin_top = 117.0
margin_right = 245.0
margin_bottom = 121.0

[node name="TABLE" type="GridContainer" parent="OverviewHUD/VBoxContainer"]
margin_top = 125.0
margin_right = 245.0
margin_bottom = 261.0
columns = 6

[node name="SPACE1" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_top = 1.0
margin_bottom = 15.0

[node name="ICON1" type="TextureRect" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 4.0
margin_right = 20.0
margin_bottom = 16.0
texture = ExtResource( 7 )

[node name="VSeparator1a" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 24.0
margin_right = 28.0
margin_bottom = 16.0

[node name="DISTANCE1" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 32.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 15.0
text = "100 km"

[node name="VSeparator1b" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 84.0
margin_right = 88.0
margin_bottom = 16.0

[node name="NAME1" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 92.0
margin_top = 1.0
margin_right = 234.0
margin_bottom = 15.0
text = "Ishokone Refining Stat"
align = 2

[node name="SPACE2" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_top = 21.0
margin_bottom = 35.0

[node name="ICON2" type="TextureRect" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 4.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 36.0
texture = ExtResource( 7 )

[node name="VSeparator1a2" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 24.0
margin_top = 20.0
margin_right = 28.0
margin_bottom = 36.0

[node name="DISTANCE2" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 32.0
margin_top = 21.0
margin_right = 80.0
margin_bottom = 35.0
text = "100 m"

[node name="VSeparator1b2" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 84.0
margin_top = 20.0
margin_right = 88.0
margin_bottom = 36.0

[node name="NAME2" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 92.0
margin_top = 21.0
margin_right = 234.0
margin_bottom = 35.0
text = "Asteroid (Veldspar)"
align = 2

[node name="SPACE3" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_top = 41.0
margin_bottom = 55.0

[node name="ICON3" type="TextureRect" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 4.0
margin_top = 40.0
margin_right = 20.0
margin_bottom = 56.0
texture = ExtResource( 7 )

[node name="VSeparator1a3" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 24.0
margin_top = 40.0
margin_right = 28.0
margin_bottom = 56.0

[node name="DISTANCE3" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 32.0
margin_top = 41.0
margin_right = 80.0
margin_bottom = 55.0
text = "100 m"

[node name="VSeparator1b3" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 84.0
margin_top = 40.0
margin_right = 88.0
margin_bottom = 56.0

[node name="NAME3" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 92.0
margin_top = 41.0
margin_right = 234.0
margin_bottom = 55.0
text = "Asteroid (Veldspar)"
align = 2

[node name="SPACE4" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_top = 61.0
margin_bottom = 75.0

[node name="ICON4" type="TextureRect" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 4.0
margin_top = 60.0
margin_right = 20.0
margin_bottom = 76.0
texture = ExtResource( 7 )

[node name="VSeparator1a4" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 24.0
margin_top = 60.0
margin_right = 28.0
margin_bottom = 76.0

[node name="DISTANCE4" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 32.0
margin_top = 61.0
margin_right = 80.0
margin_bottom = 75.0
text = "100 m"

[node name="VSeparator1b4" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 84.0
margin_top = 60.0
margin_right = 88.0
margin_bottom = 76.0

[node name="NAME4" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 92.0
margin_top = 61.0
margin_right = 234.0
margin_bottom = 75.0
text = "Asteroid (Veldspar)"
align = 2

[node name="SPACE5" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_top = 81.0
margin_bottom = 95.0

[node name="ICON5" type="TextureRect" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 4.0
margin_top = 80.0
margin_right = 20.0
margin_bottom = 96.0
texture = ExtResource( 7 )

[node name="VSeparator1a5" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 24.0
margin_top = 80.0
margin_right = 28.0
margin_bottom = 96.0

[node name="DISTANCE5" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 32.0
margin_top = 81.0
margin_right = 80.0
margin_bottom = 95.0
text = "100 m"

[node name="VSeparator1b5" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 84.0
margin_top = 80.0
margin_right = 88.0
margin_bottom = 96.0

[node name="NAME5" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 92.0
margin_top = 81.0
margin_right = 234.0
margin_bottom = 95.0
text = "Asteroid (Veldspar)"
align = 2

[node name="SPACE6" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_top = 101.0
margin_bottom = 115.0

[node name="ICON6" type="TextureRect" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 4.0
margin_top = 100.0
margin_right = 20.0
margin_bottom = 116.0
texture = ExtResource( 7 )

[node name="VSeparator1a6" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 24.0
margin_top = 100.0
margin_right = 28.0
margin_bottom = 116.0

[node name="DISTANCE6" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 32.0
margin_top = 101.0
margin_right = 80.0
margin_bottom = 115.0
text = "100 m"

[node name="VSeparator1b6" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 84.0
margin_top = 100.0
margin_right = 88.0
margin_bottom = 116.0

[node name="NAME6" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 92.0
margin_top = 101.0
margin_right = 234.0
margin_bottom = 115.0
text = "Asteroid (Veldspar)"
align = 2

[node name="SPACE7" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_top = 121.0
margin_bottom = 135.0

[node name="ICON7" type="TextureRect" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 4.0
margin_top = 120.0
margin_right = 20.0
margin_bottom = 136.0
texture = ExtResource( 7 )

[node name="VSeparator1a7" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 24.0
margin_top = 120.0
margin_right = 28.0
margin_bottom = 136.0

[node name="DISTANCE7" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 32.0
margin_top = 121.0
margin_right = 80.0
margin_bottom = 135.0
text = "100 m"

[node name="VSeparator1b7" type="VSeparator" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 84.0
margin_top = 120.0
margin_right = 88.0
margin_bottom = 136.0

[node name="NAME7" type="Label" parent="OverviewHUD/VBoxContainer/TABLE"]
margin_left = 92.0
margin_top = 121.0
margin_right = 234.0
margin_bottom = 135.0
text = "Asteroid (Veldspar)"
align = 2

[node name="LowerHUD" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -74.0
margin_right = 75.0
margin_bottom = 76.0
custom_styles/panel = ExtResource( 6 )

[node name="LabelAction" type="Label" parent="LowerHUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_as_outline = 1
text = "ACTION"
align = 1

[node name="LabelActionTarget" type="Label" parent="LowerHUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0.129412, 0.94902, 1, 1 )
custom_colors/font_color_shadow = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_as_outline = 1
text = "TARGET"
align = 1

[node name="Speed" type="ProgressBar" parent="LowerHUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -17.0
margin_right = 71.5
margin_bottom = -3.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 2 )
step = 1.0
value = 10.0

[node name="LabelSpeed" type="Label" parent="LowerHUD/Speed"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.94902, 0.0313726, 1 )
custom_colors/font_color_shadow = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_as_outline = 1
text = "Speed"

[node name="LabelSpeedMS" type="Label" parent="LowerHUD/Speed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -21.0
margin_right = 34.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0, 1, 0.192157, 1 )
custom_colors/font_color_shadow = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_as_outline = 1
align = 1

[node name="HullIntegrity" type="ProgressBar" parent="LowerHUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.0
margin_top = 49.0
margin_right = 21.0
margin_bottom = 63.0
rect_rotation = -44.9999
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 3 )
max_value = 1000.0
step = 1.0
value = 500.0

[node name="LabelHull" type="Label" parent="LowerHUD/HullIntegrity"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.94902, 0.0313726, 1 )
custom_colors/font_color_shadow = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_as_outline = 1
text = "Hull"

[node name="CargoHold" type="ProgressBar" parent="LowerHUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -198.0
margin_right = 168.0
margin_bottom = -184.0
rect_rotation = 44.9999
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 4 )
max_value = 1000.0
step = 1.0
value = 100.0

[node name="LabelHold" type="Label" parent="LowerHUD/CargoHold"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.94902, 0.0313726, 1 )
custom_colors/font_color_shadow = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_as_outline = 1
text = "Cargo"

[node name="MiningButton" type="TextureButton" parent="LowerHUD"]
margin_left = 234.0
margin_top = -39.0
margin_right = 302.0
margin_bottom = 29.0
hint_tooltip = "Test Mining Tooltip
Laser: 292
Yield: 822
Range: 383"
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="MiningBar" type="ProgressBar" parent="LowerHUD/MiningButton"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_colors/font_color = Color( 0, 0.333333, 1, 1 )
custom_styles/fg = SubResource( 5 )
step = 1.0

[node name="MiningCycle" type="Timer" parent="LowerHUD/MiningButton"]
wait_time = 5.0

[connection signal="mouse_entered" from="OverviewHUD" to="." method="_on_OverviewHUD_mouse_entered"]
[connection signal="mouse_exited" from="OverviewHUD" to="." method="_on_OverviewHUD_mouse_exited"]
[connection signal="mouse_entered" from="LowerHUD/MiningButton" to="." method="_on_MiningButton_mouse_entered"]
[connection signal="mouse_exited" from="LowerHUD/MiningButton" to="." method="_on_MiningButton_mouse_exited"]
[connection signal="pressed" from="LowerHUD/MiningButton" to="." method="_on_MiningButton_pressed"]
